--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - torchvision=0.12.0
   - matplotlib=3.5.1
   - tqdm=4.62.3
+  - pandas=1.4.1
   - pip:
     - argparse==1.4.0
     - black==22.1.0
