--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - matplotlib=3.5.1
   - tqdm=4.62.3
   - pandas=1.4.1
+  - scikit-learn=1.0.2
   - pip:
     - argparse==1.4.0
-    - black==22.1.0
+    - black==22.3.0
