--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "run",
             "type": "shell",
-            "command": "${command:python.interpreterPath} run.py",
+            "command": "conda run -n synthetic-face-generation --no-capture-output --live-stream python run.py",
             "group": {
                 "kind": "build",
                 "isDefault": true
