--- a/environment/env_unetgan.yml
+++ b/environment/env_unetgan.yml
@@ -1,7 +1,7 @@
 channels:
   - pytorch
 dependencies:
-  - python=3.6.6
+  - python=3.6
   - pip
   - scipy=1.1.0 
   - matplotlib=2.2.2 
@@ -16,3 +16,4 @@ dependencies:
   - tqdm=4.63.0
   - pip:
     - argparse==1.4.0
+    - pandas==1.1.5
