--- a/environment/env_styleswin.yml
+++ b/environment/env_styleswin.yml
@@ -7,6 +7,8 @@ dependencies:
   - cudatoolkit=11.3.1
   - pip:
     - argparse==1.4.0
+    - matplotlib==3.5.1
     - ninja==1.10.2.3
+    - pandas==1.3.5
     - timm==0.5.4
     - tqdm==4.64.0
